--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>floricultura</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -14,6 +14,10 @@
             <li class="cabecalho-lista-item">Estudante</li>
         </ul>
     </header>
-
+<section class "escola">
+<h2 class-"escola-titulo" sobre a escola</h2>
+    <p class="escola-texto um"</p>
+    <p class="escola-texto dois"</p>
+</section>
 </body>
 </html>
