--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -6,7 +7,9 @@
     <title>Floricultura</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+
     <header class="cabecalho">
         <img class="cabecalho-imagem" src="logo flor.png" alt="logo da alura start">
         <ul class="cabecalho-lista">
@@ -14,10 +17,13 @@
             <li class="cabecalho-lista-item">Estudante</li>
         </ul>
     </header>
-<section class "escola">
-<h2 class-"escola-titulo" sobre a escola</h2>
-    <p class="escola-texto um"</p>
-    <p class="escola-texto dois"</p>
-</section>
+
+    <section class "escola">
+
+        <h2 class="escola-titulo" sobre a escola </h2>
+            <p class="escola-texto um" </p>
+            <p class="escola-texto dois" </p>
+    </section>
 </body>
+
 </html>
