--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <section class "escola">
 
         <h2 class="escola-titulo"> Sobre a escola</h2>  
-            <p class="escola-texto um" </p>
-            <p class="escola-texto dois" </p>
+            <p class="escola-texto um"> dfsdfsdf</p>
+            <p class="escola-texto dois"> xcvcxv</p>
     </section>
 </body>
 
