--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <section class "escola">
 
-        <h2 class="escola-titulo"> Sobre a escola</h2>  
+        <h2 class="escola-titulo"> Sobre a floricultura</h2>  
             <p class="escola-texto um"> dfsdfsdf</p>
             <p class="escola-texto dois"> xcvcxv</p>
     </section>
