--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section class "escola">
 
         <h2 class="escola-titulo"> Sobre a floricultura</h2>  
-            <p class="escola-texto um"> dfsdfsdf</p>
+            <p class="escola-texto um"> nossa floricultura vende arranjos, plantas ornamentais, buquet de flores, bonsai, como também artigos de presentes complementares como: pelúcias, cartões, cestas, espumantes, entre outros.</p>
             <p class="escola-texto dois"> xcvcxv</p>
     </section>
 </body>
