--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <h2 class="escola-titulo"> Sobre a floricultura</h2>  
             <p class="escola-texto um"> nossa floricultura vende arranjos, plantas ornamentais, buquet de flores, bonsai, como também artigos de presentes complementares como: pelúcias, cartões, cestas, espumantes, entre outros.</p>
-            <p class="escola-texto dois"> xcvcxv</p>
+            <p class="escola-texto dois"> nosssa floricultura tem como objetivo  comercializa flores e plantas, prioritariamente. Pode comercializar também arranjos, plantas ornamentais, buquet de flores, bonsai, como também artigos de presentes complementares como: pelúcias, cartões, cestas, espumantes, entre outros.</p>
     </section>
 </body>
 
